--- a/package.json
+++ b/package.json
@@ -13,7 +13,39 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
     "element-ui": "^2.13.2",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "@babel/polyfill": "^7.8.7",
+    "@jiaminghi/data-view": "^2.8.3",
+    "axios": "^0.19.0",
+    "core-js": "^3.6.4",
+    "echarts": "^4.7.0",
+    "echarts-gl": "^1.1.1",
+    "echarts-liquidfill": "^2.0.5", 
+    "es6-promise": "^4.2.8",
+    "font-awesome": "^4.7.0",
+    "html2canvas": "^1.0.0-rc.5",
+    "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.4.1",
+    "js-base64": "^2.5.1",
+    "jspdf": "^1.5.3",
+    "lib-flexible": "^0.3.2",
+    "qs": "^6.9.1",
+    "quill": "^1.3.7",
+    "swiper": "^3.4.2",
+    "v-distpicker": "^1.2.2",
+    "vant": "^2.8.0",
+    "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-baidu-map": "^0.21.22",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.5.13",
+    "vue-filter": "^0.2.5",
+    "vue-flip-page": "^1.0.7",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.3",
+    "wangeditor": "^3.1.1",
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
